--- a/libraryManagement/src/main/resources/application.properties
+++ b/libraryManagement/src/main/resources/application.properties
@@ -3,8 +3,10 @@ spring.datasource.url=jdbc:mysql://127.0.0.1:3306/qltv
 spring.datasource.username=root
 spring.datasource.password=admin
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-#spring.jpa.hibernate.ddl-auto=update
-#logging.level.org.springframework.boot.autoconfigure=DEBUG
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.show-sql=true
+logging.level.org.springframework.boot.autoconfigure=DEBUG
 # App Properties
 snizhel.app.jwtCookieName=snizhel
 snizhel.app.jwtSecret=SecretKey
