--- a/libraryManagement/pom.xml
+++ b/libraryManagement/pom.xml
@@ -18,6 +18,8 @@
     <description>project for Spring Boot</description>
     <properties>
         <java.version>17</java.version>
+        <maven.compiler.source>19</maven.compiler.source>
+        <maven.compiler.target>19</maven.compiler.target>
     </properties>
     <dependencies>
         <dependency>
