--- a/libraryManagement/src/main/resources/application.properties
+++ b/libraryManagement/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 server.port=${port:8080}
 spring.datasource.url=jdbc:mysql://127.0.0.1:3306/qltv
 spring.datasource.username=root
-spring.datasource.password=admin
+spring.datasource.password=123456
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.format_sql=true
